@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile configure install prepare test
+DESCRIPTION=high level interface to Linux seccomp filter
+EAPI=5
+HOMEPAGE=https://github.com/seccomp/libseccomp
+IUSE=static-libs abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64
+KEYWORDS=-* ~amd64 ~arm ~arm64 ~mips ~x86
+LICENSE=LGPL-2
+SLOT=0
+SRC_URI=https://github.com/seccomp/libseccomp/releases/download/v2.2.0/libseccomp-2.2.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	62927b3db3a589b0806255f3a002d5d3	multilib-build	0983c7893df461213a05f791cc7dea6d	multilib-minimal	13dd976916c35a1e2c8d170e840c7018	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=3ae6abd16eabcbdeec9d213fd3ee9a04
