@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/libseccomp
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libseccomp/ChangeLog,v 1.15 2014/01/14 13:52:31 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libseccomp/ChangeLog,v 1.16 2015/04/09 17:59:44 vapier Exp $
+
+*libseccomp-2.2.0 (09 Apr 2015)
+
+  09 Apr 2015; Mike Frysinger <vapier@gentoo.org> +libseccomp-2.2.0.ebuild:
+  Version bump #546068 by Robert Sebastian Gerus.
 
   14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libseccomp-2.1.1.ebuild:
   Stable for x86, wrt bug #495966
